--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <p> Laura, een naïeve advocate uit Madrid reist naar de Democratische Republiek Congo in Afrika om op
                     zoek te gaan naar haar jongere zus Sara. Zij was verdwenen, maar een foto bewijst dat Sara na 2
                     jaar in leven blijkt te zijn. De locatie van de foto blijkt Goma te zijn, een van de meest
-                    onrustige gebieden van het land die wordt geteisterd door geweld en conflict.E</p>
+                    onrustige gebieden van het land die wordt geteisterd door geweld en conflict.</p>
                     <h3 class="verschoven-film4"> 2018 </h3>
 
                 <h4>Cast: Blake Lively, Michiel Huisman, Harrison Ford</h4>
